--- a/HTML/标签云3D.html
+++ b/HTML/标签云3D.html
@@ -127,6 +127,9 @@
     });
     console.log(1)
     requestAnimationFrame(animate);
+    // setInterval(() => {
+    //   animate()
+    // }, 1000);
   }
 
   if ("addEventListener" in window) {
